--- a/projects/material-file-input/package.json
+++ b/projects/material-file-input/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ngx-custom-material-file-input",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daemons88/ngx-custom-material-file-input"
+  },
   "description": "File input management for Angular Material",
   "keywords": [
     "angular",
@@ -11,10 +15,10 @@
     "mat-form-field"
   ],
   "peerDependencies": {
-    "@angular/cdk": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/material": "^14.0.0"
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/material": "^15.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
