--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "library-workspace",
-  "version": "4.0.0",
+  "version": "18.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,21 +9,22 @@
     "pack-lib": "cd dist/material-file-input && npm pack",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "install-local": "npm run build-library && npm run pack-lib && npm install dist/material-file-input/ngx-custom-material-file-input-4.0.0.tgz",
-    "publish": "npm run build-library && npm run pack-lib && npm publish dist/material-file-input/ngx-custom-material-file-input-4.0.0.tgz --access public"
+    "install-local": "npm run build-library && npm run pack-lib && npm install dist/material-file-input/ngx-custom-material-file-input-18.0.0.tgz",
+    "publish": "npm run build-library && npm run pack-lib && npm publish dist/material-file-input/ngx-custom-material-file-input-18.0.0.tgz --access public"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.1",
-    "@angular/cdk": "^17.0.4",
+    "@angular/cdk": "^18.0.1",
     "@angular/common": "^18.0.1",
     "@angular/compiler": "^18.0.1",
     "@angular/core": "^18.0.1",
     "@angular/forms": "^18.0.1",
-    "@angular/material": "^17.0.4",
+    "@angular/material": "^18.0.1",
     "@angular/platform-browser": "^18.0.1",
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
+    "ngx-custom-material-file-input": "file:dist/material-file-input/ngx-custom-material-file-input-18.0.0.tgz",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
