--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.0.0",
+    "@angular/animations": "^21.0.0",
     "@angular/cdk": "^20.0.1",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
+    "@angular/common": "^21.0.0",
+    "@angular/compiler": "^21.0.0",
+    "@angular/core": "^21.0.0",
+    "@angular/forms": "^21.0.0",
     "@angular/material": "^20.0.1",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-browser-dynamic": "^20.0.0",
-    "@angular/router": "^20.0.0",
+    "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-browser-dynamic": "^21.0.0",
+    "@angular/router": "^21.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.0.0",
     "@angular-eslint/schematics": "18.0.1",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
+    "@angular/build": "^21.0.0",
+    "@angular/cli": "~21.0.0",
+    "@angular/compiler-cli": "^21.0.0",
     "@types/body-parser": "^1.19.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
@@ -41,8 +41,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "ng-packagr": "^20.0.0",
-    "typescript": "~5.8.3"
+    "ng-packagr": "^21.0.0",
+    "typescript": "~5.9.3"
   },
   "engines": {
     "node": ">=20.11.1"
