--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "library-workspace",
-  "version": "20.0.0",
+  "version": "21.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,8 +9,8 @@
     "pack-lib": "cd dist/material-file-input && npm pack",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "install-local": "npm run build-library && npm run pack-lib && npm install dist/material-file-input/ngx-custom-material-file-input-20.0.0.tgz",
-    "publish": "npm run build-library && npm run pack-lib && npm publish dist/material-file-input/ngx-custom-material-file-input-20.0.0.tgz --access public"
+    "install-local": "npm run build-library && npm run pack-lib && npm install dist/material-file-input/ngx-custom-material-file-input-21.0.0.tgz",
+    "publish": "npm run build-library && npm run pack-lib && npm publish dist/material-file-input/ngx-custom-material-file-input-21.0.0.tgz --access public"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "ngx-custom-material-file-input": "file:dist/material-file-input/ngx-custom-material-file-input-21.0.0.tgz",
     "rxjs": "~7.5.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
