--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@angular/cli": "~21.0.0",
     "@angular/compiler-cli": "^21.0.0",
     "@types/body-parser": "^1.19.5",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "@types/jasmine": "^5.1.3",
+    "jasmine-core": "^5.1.2",
+    "karma": "^6.4.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "^21.0.0",
     "typescript": "~5.9.3"
   },
